--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
+    "jimp": "^0.13.0",
     "tesseract.js": "^2.1.1",
     "vue": "^2.6.11"
   },
